--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,4 +12,8 @@
     .btn-primary {
         @apply bg-primary-500 text-white py-3 px-6 rounded-md hover:bg-primary-600 transition-all;
     }
+
+    header nav ul li a {
+        @apply inline-block py-3 border-b-4 border-primary hover:border-white transition-all;
+    }
 }
