--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,19 @@
 }
 
 @layer components {
-    .rgs-container { @apply container max-w-screen-xl px-5 }
-    .rgs-button { @apply bg-primary-500 text-white py-3 px-6 rounded-md hover:bg-primary-600 transition-all; }
+    .backdrop { @apply absolute left-0 top-0 invisible opacity-0 w-screen h-screen bg-gray-700 z-10 transition-all lg:hidden; }
+    .backdrop.active { @apply visible opacity-50 lg:hidden; }
+
+    .rgs-container { @apply container max-w-screen-xl px-5; }
+    .rgs-button { @apply bg-primary-500 text-white py-3 px-6 rounded-md transition-all hover:bg-primary-600; }
+
+    header { @apply fixed top-0 w-full shadow-lg bg-primary flex justify-center py-6; }
+    header .header-nav { @apply hidden lg:block; }
+    header .header-nav-items { @apply flex items-center text-sm space-x-6 text-white; }
+    header .header-nav-item { @apply inline-block py-3 border-b-2 border-transparent transition-all text-center hover:border-white; }
+    header .header-sidenav { @apply absolute right-0 top-0 z-20 w-56 h-screen shadow-md transform translate-x-full transition-all bg-white text-sm shadow-md py-3 lg:hidden; }
+    header .header-sidenav.active { @apply translate-x-0 lg:hidden; }
+    header .header-sidenav-item { @apply block px-5 py-5 hover:bg-gray-100; }
+    header .header-sidenav-button { @apply inline-block text-2xl text-white lg:hidden; }
 }
+
