--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,5 +32,17 @@
 
     .sdm .sdm-banner { height: 450px; }
     .sdm .sdm-list { list-style-image: url('../img/sdm-list-style-image.png') }
+    
+    #brosur .brosur-list li { @apply flex items-center; }
+    #brosur .brosur-list li:before { 
+        content: '';
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+        padding-right: 15px;
+        display: inline-block;
+        background-image: url('../img/check-icon.png');
+        background-size: cover;
+    }
 }
 
