add scroll behavior when window is scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-    html, body { @apply font-primary; }
+    html, body { @apply font-primary; scroll-behavior: smooth; }
     button { @apply focus:outline-none ring-0 border-0; }
 }
 
