--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
     .banner { @apply relative mt-20 py-6 lg:px-12 overflow-hidden; height: calc(100vh - 150px); }
     .banner .banner-wrapper { @apply flex items-end md:items-center justify-end h-full; }
     .banner .banner-background { @apply absolute left-0 top-0 w-full h-full object-cover; }
-    .banner .banner-content { @apply relative bg-black bg-opacity-60 text-xl md:text-3xl text-white p-10 leading-loose text-center md:text-left md:w-1/2; }
+    .banner .banner-content { @apply relative bg-black bg-opacity-60 text-xl md:text-3xl text-white p-10 leading-loose text-left md:text-left w-2/3; }
     .banner .banner-content strong { @apply text-primary; }
 
     .sdm .sdm-banner { height: 450px; }
